коректировка-раздел другое

--- a/index.html
+++ b/index.html
@@ -1092,17 +1092,62 @@
 
             <div class="col-sm">
               <ul id="">
-                <span class="badge badge-success">*Разное*</span>
+                <span class="badge badge-warning">*Торрент-программы*</span>
                 <hr>
-                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
+                <li><img class="icon" src="img/utorrent.com.ico" alt="utorrent.com"><a href="https://www.utorrent.com/intl/ru/desktop/" target="_blank">Скачать utorrent</a></li>
+                <li><img class="icon" src="img/acestream.org.ico" alt="acestream.org"><a href="http://www.acestream.org/" target="_blank">Скачать Acestream плеер</a></li>
+              </ul>
+              <ul id="">
+                <span class="badge badge-success">*Торрент-трекеры*</span>
+                <hr>
+                <li><img class="icon" src="img/rutracker.org.png" alt="rutracker.org"><a href="https://rutracker.org/" target="_blank">rutracker.org</a></li>
+                <li><img class="icon" src="img/nnmclub.to.png" alt="nnmclub.to"><a href="http://nnmclub.to/" target="_blank">nnmclub.to</a><span class="opisi">возможно VPN</span></li>
+                <li><img class="icon" src="img/utorrent.com.ico" alt="newtorrent.org"><a href="http://newtorrent.org/" target="_blank">newtorrent.org</a></li>
+                <li><img class="icon" src="img/filmitorrent.ico" alt="filmitorrent"><a href="http://filmitorrent.xyz/" target="_blank">filmitorrent</a><span class="opisi">ТОП фильмы</span></li>
+                <li><img class="icon" src="img/pb.wtf.png" alt="pb.wtf"><a href="https://pb.wtf/" target="_blank">pb.wtf</a><span class="opisi">фильмы</span></li>
+                <li><img class="icon" src="img/torrent-filmi.net.ico" alt="torrent-filmi.net"><a href="http://torrent-filmi.net/" target="_blank">torrent-filmi.net</a><span class="opisi">фильмы</span></li>
+                <li><img class="icon" src="img/lostfilm.tv.ico" alt="lostfilm.tv"><a href="https://www.lostfilm.tv/" target="_blank">lostfilm.tv</a></li>
+                <li><img class="icon" src="img/rutor.info.ico" alt="rutor.info"><a href="http://rutor.info/" target="_blank">rutor.info</a></li>
+              </ul>
+              <ul id="">
+                <span class="badge badge-success">*Карты*</span>
+                <hr>
+                <li><img class="icon" src="img/google.maps.png" alt="google_maps"><a href="https://www.google.com.ua/maps/" target="_blank">google_maps</a></li>
+                <li><img class="icon" src="img/yandex_maps.png" alt="yandex_maps"><a href="https://yandex.ua/maps/" target="_blank">yandex_maps</a><span class="opisi">нужен VPN</span></li>
+                <li><img class="icon" src="img/maps.visicom.ua.png" alt="maps.visicom.ua"><a href="https://maps.visicom.ua/" target="_blank">maps.visicom.ua</a></li>
+              </ul>
+              <ul id="">
+                <span class="badge badge-success">*Интернет хранилище для ВАС (облако)*</span>
+                <hr>
+                <li><img class="icon" src="img/mega.nz.ico" alt="mega.nz"><a href="https://mega.nz/" target="_blank">mega.nz</a><span class="opisi">получите 50 ГБ</span></li>
+                <li><img class="icon" src="img/drive.google.com.ico" alt="drive.google.com"><a href="https://drive.google.com/drive/" target="_blank">drive.google.com</a><span class="opisi">получите 15 ГБ</span></li>
+                <li><img class="icon" src="img/dropbox.com.ico" alt="dropbox.com"><a href="https://www.dropbox.com/ru/" target="_blank">dropbox.com</a><span class="opisi">получите 2-5 ГБ</span></li>
               </ul>
             </div>
 
             <div class="col-sm">
               <ul id="">
-                <span class="badge badge-success">*Разное*</span>
+                <span class="badge badge-success">*Религия*</span>
                 <hr>
-                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
+                <li><img class="icon" src="img/bibleonline.ru.ico" alt="bibleonline.ru"><a href="https://www.bibleonline.ru/" target="_blank">bibleonline.ru</a><span class="opisi">Библия онлайн</span></li>
+                <li><img class="icon" src="img/bible-teka.com.ico" alt="bible-teka.com"><a href="https://bible-teka.com/" target="_blank">bible-teka.com</a><span class="opisi">Библия онлайн</span></li>
+                <li><img class="icon" src="img/bible.by.ico" alt="bible.by"><a href="https://bible.by/" target="_blank">bible.by</a><span class="opisi">Библия онлайн</span></li>
+                <li><img class="icon" src="img/slovohrista.org.jpg" alt="slovohrista.org"><a href="http://slovohrista.org/" target="_blank">slovohrista.org</a></li>
+                <li><img class="icon" src="img/slovo50.at.ua.png" alt="slovo50.at.ua"><a href="http://slovo50.at.ua/" target="_blank">slovo50.at.ua</a></li>
+              </ul>
+              <ul id="">
+                <span class="badge badge-success">*Всякое*</span>
+                <hr>
+                <li><img class="icon" src="img/wikipedia.org.ico" alt="wikipedia.org"><a href="https://ru.wikipedia.org/" target="_blank">wikipedia</a><span class="opisi">Свободная энциклопедия</span></li>
+                <li><img class="icon" src="img/1000.menu.ico" alt="1000.menu"><a href="https://1000.menu/" target="_blank">1000.menu</a><span class="opisi">Вкусные домашние рецепты</span></li>
+                <li><img class="icon" src="img/remontcompa.ru.ico" alt="remontcompa.ru"><a href="https://remontcompa.ru/" target="_blank">remontcompa</a><span class="opisi">Энциклопедия Windows</span></li>
+                <li><img class="icon" src="img/passmark.com.gif" alt="passmark.com"><a href="https://www.passmark.com/" target="_blank">passmark</a><span class="opisi">Сравнение комп.железа</span></li>
+                <li><img class="icon" src="img/roomtodo.com.png" alt="roomtodo.com"><a href="https://roomtodo.com/" target="_blank">roomtodo.com</a><span class="opisi">Дизайну інтер'єру 3D</span></li>
+                <li><img class="icon" src="img/prnt.sc.ico" alt="prnt.sc"><a href="https://prnt.sc/" target="_blank">Lightshot</a><span class="opisi">Инструмент для скриншотов</span></li>
+                <li><img class="icon" src="img/onlinetimer.png" alt="onlinetimer"><a href="https://onlinetimer.ru/" target="_blank">onlinetimer</a><span class="opisi">Онлайн Таймер</span></li>
+                <li><img class="icon" src="img/time.in.ua.jpg" alt="time.in.ua"><a href="http://time.in.ua/" target="_blank">time.in.ua</a><span class="opisi">Точное время</span></li>
+                <li><img class="icon" src="img/ntp-servers.net.jpg" alt="ntp-servers.net"><a href="https://www.ntp-servers.net/" target="_blank">ntp-servers</a><span class="opisi">Свободная энциклопедия</span></li>
+                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a><span class="opisi">Свободная энциклопедия</span></li>
               </ul>
             </div>
 
@@ -1268,37 +1313,25 @@
 
 
         <div class="tab-pane fade" id="progsis" role="tabpanel" aria-labelledby="progsis-tab">
-          <div class="row">здесь (со временем) будут ссылки на всякие программы, плагины, утилиты, и т.п.
+          <div class="row">
 
-            <!--             <div class="col-sm">
+            <div class="col-sm">
               <ul id="">
-                <span class="badge badge-primary">*Підгрупа-СИНЯЯ*</span>
+                <span class="badge badge-warning">*Торрент-программы*</span>
                 <hr>
-                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
+                <li><img class="icon" src="img/utorrent.com.ico" alt="utorrent.com"><a href="https://www.utorrent.com/intl/ru/desktop/" target="_blank">Скачать utorrent</a></li>
+                <li><img class="icon" src="img/acestream.org.ico" alt="acestream.org"><a href="http://www.acestream.org/" target="_blank">Скачать Acestream плеер</a></li>
               </ul>
               <ul id="">
-                <span class="badge badge-dark">*Підгрупа-ЧЕРНАЯ*</span>
+                <span class="badge badge-warning">*Загрузить мессенджеры*</span>
                 <hr>
-                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
-              </ul>
-              <ul id="">
-                <span class="badge badge-warning">*Підгрупа-ЖЕЛТАЯ*</span>
-                <hr>
-                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
-              </ul>
-              <ul id="">
-                <span class="badge badge-success">*Підгрупа-ЗЕЛЕНАЯ*</span>
-                <hr>
-                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
-              </ul>
-              <ul id="">
-                <span class="badge badge-danger">*Підгрупа-КРАСНАЯ*</span>
-                <hr>
-                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
+                <li><img class="icon" src="img/telegram.ico" alt="tlgrm.ru"><a href="https://tlgrm.ru/apps" target="_blank">Скачать TELEGRAM</a></li>
+                <li><img class="icon" src="img/viber.png" alt="viber.com"><a href="https://www.viber.com/ru/download/" target="_blank">Скачать VIBER</a></li>
+                <li><img class="icon" src="img/skype.ico" alt="skype.com"><a href="https://www.skype.com/ru/get-skype/" target="_blank">Скачать SKYPE</a></li>
               </ul>
             </div>
 
-            <div class="col-sm">
+<!--             <div class="col-sm">
               <ul id="">
                 <span class="badge badge-primary">*Підгрупа-СИНЯЯ*</span>
                 <hr>
