--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                 <hr>
                 <li><img class="icon" src="img/privat24.ua.ico" alt="privat24.ua"><a href="https://www.privat24.ua/" target="_blank">privat24.ua</a><span class="opisi">Онлайн</span></li>
                 <li><img class="icon" src="img/online.oschadbank.ua.ico" alt="online.oschadbank.ua"><a href="https://online.oschadbank.ua/wb/" target="_blank">online.oschadbank.ua</a><span class="opisi">Онлайн</span></li>
-                <li><img class="icon" src="img/online.aval.ua.ico" alt="online.aval.ua"><a href="https://online.aval.ua/ibank/home?0" target="_blank">online.aval.ua</a><span class="opisi">Онлайн</span></li>
+                <li><img class="icon" src="img/online.aval.ua.png" alt="online.aval.ua"><a href="https://online.aval.ua/ibank/home?0" target="_blank">online.aval.ua</a><span class="opisi">Онлайн</span></li>
 				<li><img class="icon" src="img/payoneer.com.ico" alt="payoneer"><a href="https://www.payoneer.com/raf/?rid=0FA0C022-2289-43EC-8770-3B4409BD83AF" target="_blank">payoneer`</a><span class="opisi">Интернет кошелек</span></li>
                 <li><img class="icon" src="img/payeer.com.ico" alt="payeer"><a href="https://payeer.com/?partner=1687223" target="_blank">payeer`</a><span class="opisi">Интернет кошелек</span></li>
                 <li><img class="icon" src="img/minfin.com.ua.ico" alt="minfin"><a href="https://minfin.com.ua/currency/" target="_blank">minfin.com.ua</a><span class="opisi">Курс валют</span></li>
@@ -475,7 +475,7 @@
                 <span class="badge badge-success">*Музыка онлайн*</span>
                 <hr>
                 <li><img class="icon" src="img/zaycev.fm.ico" alt="zaycev.fm"><a href="https://www.zaycev.fm/" target="_blank">zaycev.fm</a></li>
-                <li><img class="icon" src="img/stopmusic.net.ico" alt="stopmusic.net"><a href="https://stopmusic.net/" target="_blank">stopmusic.net</a></li>
+                <li><img class="icon" src="img/stopmusic.net.png" alt="stopmusic.net"><a href="https://stopmusic.net/" target="_blank">stopmusic.net</a></li>
                 <li><img class="icon" src="img/muzofon.com.ico" alt="muzofon.com"><a href="http://muzofon.com/" target="_blank">muzofon.com</a></li>
                 <li><img class="icon" src="img/vk.com.ico" alt="vk.com/mzk"><a href="https://vk.com/mzk" target="_blank">vk.com/mzk</a><span class="opisi">нужен VPN</span></li>
                 <li><img class="icon" src="img/vk.com.ico" alt="vk.com/exclusive_muzic"><a href="https://vk.com/exclusive_muzic" target="_blank">vk/exclusive_muzic</a><span class="opisi">нужен VPN</span></li>
@@ -594,7 +594,7 @@
                 <li><img class="icon" src="img/cyberpolice.gov.ua.png" alt="cyberpolice"><a href="https://cyberpolice.gov.ua/" target="_blank">cyberpolice.gov.ua</a></li>
                 <li><img class="icon" src="img/kidala-net.in.ua.ico" alt="kidala-net"><a href="http://kidala-net.in.ua/" target="_blank">kidala-net.in.ua</a></li>
                 <li><img class="icon" src="img/kidalo.net.ua.ico" alt="kidalo"><a href="https://kidalo.net.ua/" target="_blank">kidalo.net.ua</a></li>
-                <li><img class="icon" src="img/mocheniki.ukr.ico" alt="мошенники.укр"><a href="http://xn--e1agahhhaf4g.xn--j1amh/" target="_blank">мошенники.укр</a></li>
+                <li><img class="icon" src="img/mocheniki.ukr.png" alt="мошенники.укр"><a href="http://xn--e1agahhhaf4g.xn--j1amh/" target="_blank">мошенники.укр</a></li>
               </ul>
             </div>
 
@@ -919,7 +919,7 @@
                 <li><img class="icon" src="img/oschadbank.ua.ico" alt="oschadbank"><a href="https://oschadbank.ua/ua" target="_blank">oschadbank.ua</a></li>
                 <li><img class="icon" src="img/online.oschadbank.ua.ico" alt="oschadbank"><a href="https://online.oschadbank.ua/wb/" target="_blank">online.oschadbank.ua</a><span class="opisi">Онлайн</span></li>
                 <li><img class="icon" src="img/aval.ua.ico" alt="aval"><a href="https://www.aval.ua/" target="_blank">aval.ua</a></li>
-                <li><img class="icon" src="img/online.aval.ua.ico" alt="aval"><a href="https://online.aval.ua/ibank/home?0" target="_blank">online.aval.ua</a><span class="opisi">Онлайн</span></li>
+                <li><img class="icon" src="img/online.aval.ua.png" alt="aval"><a href="https://online.aval.ua/ibank/home?0" target="_blank">online.aval.ua</a><span class="opisi">Онлайн</span></li>
                 <li><img class="icon" src="img/alfabank.ua.ico" alt="github"><a href="https://alfabank.ua/" target="_blank">alfabank.ua</a></li>
                 <li><img class="icon" src="img/my.alfabank.com.ua.ico" alt="alfabank"><a href="https://my.alfabank.com.ua/login" target="_blank">my.alfabank.com.ua</a><span class="opisi">Онлайн</span></li>
                 <li><img class="icon" src="img/my.ukrsibbank.com.png" alt="ukrsibbank"><a href="https://my.ukrsibbank.com/ua/personal/" target="_blank">my.ukrsibbank.com</a></li>
@@ -1006,7 +1006,7 @@
 
                 <li><img class="icon" src="img/my.ukrtelecom.ua.png" alt="my.ukrtelecom.ua"><a href="http://www.my.ukrtelecom.ua/" target="_blank">my.ukrtelecom</a><span class="opisi">КАБИНЕТ</span></li>
                 <li><img class="icon" src="img/novom.ulan.in.ua.png" alt="novom.ulan.in.ua"><a href="http://novom.ulan.in.ua/" target="_blank">novom.ulan.in.ua</a><span class="opisi">Ulan ISP</span></li>
-                <li><img class="icon" src="img/shtorm.net.ico" alt="shtorm.net"><a href="https://www.shtorm.net/uk" target="_blank">shtorm.net</a><span class="opisi">Shtorm</span></li>
+                <li><img class="icon" src="img/shtorm.net.png" alt="shtorm.net"><a href="https://www.shtorm.net/uk" target="_blank">shtorm.net</a><span class="opisi">Shtorm</span></li>
               </ul>
               <ul id="">
                 <span class="badge badge-success">*Интернет-мобильный*</span>
