--- a/index.html
+++ b/index.html
@@ -198,6 +198,11 @@
                 <span class="badge badge-dark">*Другое*</span>
                 <hr>
                 <li><img class="icon" src="img/speed2.ico" alt="speedtest.ukrtelecom.ua"><a href="http://speedtest.ukrtelecom.ua/" target="_blank">speedtest.ukrtelecom.ua</a></li>
+				<li><img class="icon" src="img/rutracker.org.png" alt="rutracker.org"><a href="https://rutracker.org/" target="_blank">rutracker.org</a><span class="opisi">Торрент-трекер</span></li>
+                <li><img class="icon" src="img/nnmclub.to.png" alt="nnmclub.to"><a href="http://nnmclub.to/" target="_blank">nnmclub.to</a><span class="opisi">Торрент-трекер+VPN</span></li>
+                <li><img class="icon" src="img/filmitorrent.ico" alt="filmitorrent"><a href="http://filmitorrent.xyz/" target="_blank">filmitorrent</a><span class="opisi">Торрент-трекер+ТОП фильмы</span></li>
+                <li><img class="icon" src="img/bible-teka.com.ico" alt="bible-teka.com"><a href="https://bible-teka.com/" target="_blank">bible-teka.com</a><span class="opisi">Библия онлайн</span></li>
+				<li><img class="icon" src="img/slovohrista.org.jpg" alt="slovohrista.org"><a href="http://slovohrista.org/" target="_blank">slovohrista.org</a></li>
               </ul>
               <ul id="">
                 <span class="badge badge-dark">*Городок/Новомиргород*</span>
