--- a/index.html
+++ b/index.html
@@ -93,10 +93,10 @@
                 <li><img class="icon" src="img/facebook.com.ico" alt="Facebook"><a href="https://www.facebook.com/" target="_blank">Facebook.com</a></li>
                 <li><img class="icon" src="img/vk.com.ico" alt="ВКонтакте"><a href="https://vk.com/" target="_blank">ВКонтакте</a><span class="opisi">нужен VPN</span></li>
                 <li><img class="icon" src="img/ok.ru.ico" alt="Однокласники"><a href="https://ok.ru/" target="_blank">Однокласники</a><span class="opisi">нужен VPN</span></li>
-                <li><img class="icon" src="img/gmail.ico" alt="gmail"><a href="https://mail.google.com" target="_blank">gmail</a></li>
-                <li><img class="icon" src="img/mail.ukr.net.ico" alt="mail.ukr.net"><a href="https://accounts.ukr.net/login" target="_blank">mail.ukr.net</a></li>
-                <li><img class="icon" src="img/webmail.meta.ua.ico" alt="webmail.meta.ua"><a href="https://webmail.meta.ua/" target="_blank">webmail.meta.ua</a></li>
-                <li><img class="icon" src="img/e.mail.ru.ico" alt="e.mail.ru"><a href="https://e.mail.ru/login" target="_blank">e.mail.ru</a><span class="opisi">нужен VPN</span></li>
+                <li><img class="icon" src="img/gmail.ico" alt="gmail"><a href="https://mail.google.com" target="_blank">почта_gmail</a></li>
+                <li><img class="icon" src="img/mail.ukr.net.ico" alt="mail.ukr.net"><a href="https://accounts.ukr.net/login" target="_blank">почта_ukr.net</a></li>
+                <li><img class="icon" src="img/webmail.meta.ua.ico" alt="webmail.meta.ua"><a href="https://webmail.meta.ua/" target="_blank">почта_meta.ua</a></li>
+                <li><img class="icon" src="img/e.mail.ru.ico" alt="e.mail.ru"><a href="https://e.mail.ru/login" target="_blank">почта_mail.ru</a><span class="opisi">нужен VPN</span></li>
               </ul>
               <ul id="">
                 <span class="badge badge-dark">*Новости*</span>
@@ -174,10 +174,10 @@
                 <span class="badge badge-dark">*Банкинг*</span>
                 <hr>
                 <li><img class="icon" src="img/privat24.ua.ico" alt="privat24.ua"><a href="https://www.privat24.ua/" target="_blank">privat24.ua</a><span class="opisi">Онлайн</span></li>
-                <li><img class="icon" src="img/online.oschadbank.ua.ico" alt="online.oschadbank.ua"><a href="https://online.oschadbank.ua/wb/" target="_blank">online.oschadbank.ua</a><span class="opisi">Онлайн</span></li>
+                <li><img class="icon" src="img/online.oschadbank.ua.ico" alt="online.oschadbank.ua"><a href="https://online.oschadbank.ua/wb/" target="_blank">online.oschadbank</a><span class="opisi">Онлайн</span></li>
                 <li><img class="icon" src="img/online.aval.ua.png" alt="online.aval.ua"><a href="https://online.aval.ua/ibank/home?0" target="_blank">online.aval.ua</a><span class="opisi">Онлайн</span></li>
-				<li><img class="icon" src="img/payoneer.com.ico" alt="payoneer"><a href="https://www.payoneer.com/raf/?rid=0FA0C022-2289-43EC-8770-3B4409BD83AF" target="_blank">payoneer`</a><span class="opisi">Интернет кошелек</span></li>
-                <li><img class="icon" src="img/payeer.com.ico" alt="payeer"><a href="https://payeer.com/?partner=1687223" target="_blank">payeer`</a><span class="opisi">Интернет кошелек</span></li>
+				<li><img class="icon" src="img/payoneer.com.ico" alt="payoneer"><a href="https://www.payoneer.com/raf/?rid=0FA0C022-2289-43EC-8770-3B4409BD83AF" target="_blank">payoneer`</a><span class="opisi">Интерн.кошелек</span></li>
+                <li><img class="icon" src="img/payeer.com.ico" alt="payeer"><a href="https://payeer.com/?partner=1687223" target="_blank">payeer`</a><span class="opisi">Интерн.кошелек</span></li>
                 <li><img class="icon" src="img/minfin.com.ua.ico" alt="minfin"><a href="https://minfin.com.ua/currency/" target="_blank">minfin.com.ua</a><span class="opisi">Курс валют</span></li>
                 <li><img class="icon" src="img/kurs.com.ua.ico" alt="kurs.com.ua"><a href="https://kurs.com.ua/" target="_blank">kurs</a><span class="opisi">Курс/конверт валют</span></li>
                 <li><img class="icon" src="img/bestchange.ru.png" alt="bestchange.ru"><a href="https://www.bestchange.ru/" target="_blank">bestchange.ru</a><span class="opisi">Обмен валют</span></li>
@@ -185,11 +185,11 @@
               <ul id="">
                 <span class="badge badge-dark">*Комуналка*</span>
                 <hr> 
-                <li><img class="icon" src="img/minfin.com.ua.ico" alt="minfin.com.ua"><a href="https://index.minfin.com.ua/tariff/gas/" target="_blank">minfin.com.ua</a><span class="opisi">офц.цена.газ</span></li>
+                <li><img class="icon" src="img/minfin.com.ua.ico" alt="minfin.com.ua"><a href="https://index.minfin.com.ua/tariff/gas/" target="_blank">minfin.com</a><span class="opisi">оф.цена.газ</span></li>
                 <li><img class="icon" src="img/naftogazpostach.com.png" alt="naftogazpostach.com"><a href="https://naftogazpostach.com/" target="_blank">naftogaz</a><span class="opisi">Кабин.Газ.2019</span></li>
-                <li><img class="icon" src="img/minfin.com.ua.ico" alt="minfin.com.ua"><a href="https://index.minfin.com.ua/tariff/electric/" target="_blank">minfin.com.ua</a><span class="opisi">офц.цена.электр.</span></li>
-                <li><img class="icon" src="img/kiroe.com.ua.ico" alt="kiroe.com.ua"><a href="http://kiroe.com.ua/" target="_blank">kiroe</a><span class="opisi">Кабинет.Кир.обленерго</span></li>
-                <li><img class="icon" src="img/ukrtelecom.ua.png" alt="ukrtelecom.ua"><a href="https://new.ukrtelecom.ua/payment/#generate-bill" target="_blank">ukrtelecom</a><span class="opisi">Укртелеком СЧЕТ</span></li>
+                <li><img class="icon" src="img/minfin.com.ua.ico" alt="minfin.com.ua"><a href="https://index.minfin.com.ua/tariff/electric/" target="_blank">minfin.com</a><span class="opisi">оф.цена.электр.</span></li>
+                <li><img class="icon" src="img/kiroe.com.ua.ico" alt="kiroe.com.ua"><a href="http://kiroe.com.ua/" target="_blank">kiroe</a><span class="opisi">Кабин.Кир.обленерго</span></li>
+                <li><img class="icon" src="img/ukrtelecom.ua.png" alt="ukrtelecom.ua"><a href="https://new.ukrtelecom.ua/payment/#generate-bill" target="_blank">ukrtelecom</a><span class="opisi">Укртел.СЧЕТ</span></li>
 				<li><img class="icon" src="img/kyivstar.ua.ico" alt="kyivstar.ua"><a href="https://kyivstar.ua/" target="_blank">kyivstar.ua</a></li>
                 <li><img class="icon" src="img/vodafone.ua.png" alt="vodafone.ua"><a href="https://www.vodafone.ua/ru" target="_blank">vodafone.ua</a></li>
                 <li><img class="icon" src="img/lifecell.ua.png" alt="lifecell.ua"><a href="https://www.lifecell.ua/" target="_blank">lifecell.ua</a></li>
@@ -198,12 +198,15 @@
                 <span class="badge badge-dark">*Другое*</span>
                 <hr>
                 <li><img class="icon" src="img/speed2.ico" alt="speedtest.ukrtelecom.ua"><a href="http://speedtest.ukrtelecom.ua/" target="_blank">speedtest.ukrtelecom.ua</a></li>
-				<li><img class="icon" src="img/rutracker.org.png" alt="rutracker.org"><a href="https://rutracker.org/" target="_blank">rutracker.org</a><span class="opisi">Торрент-трекер</span></li>
-                <li><img class="icon" src="img/nnmclub.to.png" alt="nnmclub.to"><a href="http://nnmclub.to/" target="_blank">nnmclub.to</a><span class="opisi">Торрент-трекер+VPN</span></li>
-                <li><img class="icon" src="img/filmitorrent.ico" alt="filmitorrent"><a href="http://filmitorrent.xyz/" target="_blank">filmitorrent</a><span class="opisi">Торрент-трекер+ТОП фильмы</span></li>
-                <li><img class="icon" src="img/bible-teka.com.ico" alt="bible-teka.com"><a href="https://bible-teka.com/" target="_blank">bible-teka.com</a><span class="opisi">Библия онлайн</span></li>
+				<li><img class="icon" src="img/rutracker.org.png" alt="rutracker.org"><a href="https://rutracker.org/" target="_blank">rutracker.org</a><span class="opisi">Торрент</span></li>
+                <li><img class="icon" src="img/nnmclub.to.png" alt="nnmclub.to"><a href="http://nnmclub.to/" target="_blank">nnmclub.to</a><span class="opisi">Торрент+VPN</span></li>
+                <li><img class="icon" src="img/filmitorrent.ico" alt="filmitorrent"><a href="http://filmitorrent.xyz/" target="_blank">filmitorrent_TOP</a><span class="opisi">Торрент</span></li>
+                <li><img class="icon" src="img/bible-teka.com.ico" alt="bible-teka.com"><a href="https://bible-teka.com/" target="_blank">bible-teka</a><span class="opisi">Библия онлайн</span></li>
 				<li><img class="icon" src="img/slovohrista.org.jpg" alt="slovohrista.org"><a href="http://slovohrista.org/" target="_blank">slovohrista.org</a></li>
               </ul>
+            </div>
+
+            <div class="col-sm">
               <ul id="">
                 <span class="badge badge-dark">*Городок/Новомиргород*</span>
                 <hr>
@@ -211,13 +214,13 @@
                 <li><img class="icon" src="img/sinoptik.ico" alt="sinoptik"><a href="https://sinoptik.ua/%D0%BF%D0%BE%D0%B3%D0%BE%D0%B4%D0%B0-%D0%BD%D0%BE%D0%B2%D0%BE%D0%BC%D0%B8%D1%80%D0%B3%D0%BE%D1%80%D0%BE%D0%B4" target="_blank">Погода_Sinoptik</a></li>
                 <li><img class="icon" src="img/rp5.ua.ico" alt="rp5.ua"><a href="http://rp5.ua/%D0%9F%D0%BE%D0%B3%D0%BE%D0%B4%D0%B0_%D0%B2_%D0%9D%D0%BE%D0%B2%D0%BE%D0%BC%D0%B8%D1%80%D0%B3%D0%BE%D1%80%D0%BE%D0%B4%D0%B5" target="_blank">Погода_Rp5.ua</a></li>
                 <li><img class="icon" src="img/meteoprog.ico" alt="meteoprog"><a href="https://www.meteoprog.ua/ru/review/Novomirgorod/" target="_blank">Погода_Meteoprog</a></li>
-				<li><img class="icon" src="img/vk.ico" alt="vk"><a href="https://vk.com/novomyrhorod_baraholka" target="_blank">БАРАХОЛКА (рынок)</a><span class="opisi">нужен VPN</span></li>
+				<li><img class="icon" src="img/vk.ico" alt="vk"><a href="https://vk.com/novomyrhorod_baraholka" target="_blank">рынок.БАРАХОЛКА</a><span class="opisi">+VPN</span></li>
                 <li><img class="icon" src="img/youtube.ico" alt="youtube"><a href="https://www.youtube.com/channel/UCKjCg071hg21YxymgDfz5TA" target="_blank">Youtube_г.Новомиргород</a></li>
-                <li><img class="icon" src="img/youtube.ico" alt="youtube"><a href="https://www.youtube.com/channel/UCpx67qi-50ZnWOUlDqBhSNQ" target="_blank">Youtube_Новомиргородська ЗШ2</a></li>
-                <li><img class="icon" src="img/novomirgorod.com.png" alt="novomirgorod"><a href="http://novomirgorod.com" target="_blank">Новомиргород. Новини та події</a></li>
-                <li><img class="icon" src="img/facebook.com.ico" alt="facebook.com"><a href="https://www.facebook.com/groups/369041380158080/" target="_blank">Novomyrhorod News (facebook)</a></li>
-                <li><img class="icon" src="img/nmrda.kr-admin.gov.ua.jpg" alt="nmrda.kr-admin.gov.ua"><a href="http://nmrda.kr-admin.gov.ua/" target="_blank">Районна державна адміністрація</a></li>
-                <li><img class="icon" src="img/rada-novomirgorod.gov.ua.ico" alt="rada-novomirgorod.gov.ua"><a href="http://rada-novomirgorod.gov.ua/" target="_blank">Новомиргородська міська рада</a></li>
+                <li><img class="icon" src="img/youtube.ico" alt="youtube"><a href="https://www.youtube.com/channel/UCpx67qi-50ZnWOUlDqBhSNQ" target="_blank">Youtube_Новом-ка ЗШ2</a></li>
+                <li><img class="icon" src="img/novomirgorod.com.png" alt="novomirgorod"><a href="http://novomirgorod.com" target="_blank">Новини та події</a></li>
+                <li><img class="icon" src="img/facebook.com.ico" alt="facebook.com"><a href="https://www.facebook.com/groups/369041380158080/" target="_blank">Novom.News (facebook)</a></li>
+                <li><img class="icon" src="img/nmrda.kr-admin.gov.ua.jpg" alt="nmrda.kr-admin.gov.ua"><a href="http://nmrda.kr-admin.gov.ua/" target="_blank">Районна держ.адміністр.</a></li>
+                <li><img class="icon" src="img/rada-novomirgorod.gov.ua.ico" alt="rada-novomirgorod.gov.ua"><a href="http://rada-novomirgorod.gov.ua/" target="_blank">Новом-ка міська рада</a></li>
               </ul>
               <ul id="">
                 <span class="badge badge-dark">*Реклама*</span>
@@ -225,6 +228,7 @@
                 <!-- <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li> -->
               </ul>
             </div>
+
 
           </div>
         </div>
