edit menu grupirovka

--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
             <li class="nav-item"><a class="nav-link" onclick="topFunction()" id="news-tab" data-toggle="pill" href="#news" role="tab" aria-controls="news" aria-selected="false">Новости</a></li>
             <li class="nav-item"><a class="nav-link" onclick="topFunction()" id="media-tab" data-toggle="pill" href="#media" role="tab" aria-controls="media" aria-selected="false">Медиа</a></li>
             <li class="nav-item"><a class="nav-link" onclick="topFunction()" id="games-tab" data-toggle="pill" href="#games" role="tab" aria-controls="games" aria-selected="false">Игры</a></li>
+            <li class="nav-item"><a class="nav-link" onclick="topFunction()" id="komynal-tab" data-toggle="pill" href="#komynal" role="tab" aria-controls="komynal" aria-selected="false">Комуналка</a></li>
+            <li class="nav-item"><a class="nav-link" onclick="topFunction()" id="bank-tab" data-toggle="pill" href="#bank" role="tab" aria-controls="bank" aria-selected="false">Банкинг</a></li>
             <li class="nav-item"><a class="nav-link" onclick="topFunction()" id="rinok-tab" data-toggle="pill" href="#rinok" role="tab" aria-controls="rinok" aria-selected="false">Рынок</a></li>
             <li class="nav-item"><a class="nav-link" onclick="topFunction()" id="magazin-tab" data-toggle="pill" href="#magazin" role="tab" aria-controls="magazin" aria-selected="false">Магазины</a></li>
             <!--             <li class="nav-item"><a class="nav-link" id="magazinplus-tab" data-toggle="pill" href="#magazinplus" role="tab" aria-controls="magazinplus" aria-selected="false">Магазины+</a></li> -->
-            <li class="nav-item"><a class="nav-link" onclick="topFunction()" id="bank-tab" data-toggle="pill" href="#bank" role="tab" aria-controls="bank" aria-selected="false">Банкинг</a></li>
-            <li class="nav-item"><a class="nav-link" onclick="topFunction()" id="komynal-tab" data-toggle="pill" href="#komynal" role="tab" aria-controls="komynal" aria-selected="false">Комуналка</a></li>
             <li class="nav-item"><a class="nav-link" onclick="topFunction()" id="drygoe-tab" data-toggle="pill" href="#drygoe" role="tab" aria-controls="drygoe" aria-selected="false">Другое</a></li>
             <li class="nav-item"><a class="nav-link" onclick="topFunction()" id="gorodok-tab" data-toggle="pill" href="#gorodok" role="tab" aria-controls="gorodok" aria-selected="false">Городок</a></li>
             <li class="nav2-item"><a class="nav-link" onclick="topFunction()" id="rek-tab" data-toggle="pill" href="#rek" role="tab" aria-controls="rek" aria-selected="false">Реклама</a></li>
@@ -138,7 +138,34 @@
                 <hr> 
                 <li><img class="icon" src="img/fan-sport.com.ua.png" alt="fan-sport.com.ua"><a href="https://fan-sport.com.ua?bf=5c6990af5f28e_515561215" target="_blank">fan-sport.com.ua`</a></li>
                 <li><img class="icon" src="img/1xbetua.com.png" alt="1xbetua.com"><a href="https://1xbetua.com/?bf=5c6ae4a19a325_515575637" target="_blank">1xbetua.com`</a></li>
-              </ul>			  
+              </ul>
+              <ul id="">
+                <span class="badge badge-dark">*Комуналка*</span>
+                <hr> 
+                <li><img class="icon" src="img/minfin.com.ua.ico" alt="minfin.com.ua"><a href="https://index.minfin.com.ua/tariff/gas/" target="_blank">minfin.com</a><span class="opisi">оф.цена.газ</span></li>
+                <li><img class="icon" src="img/naftogazpostach.com.png" alt="naftogazpostach.com"><a href="https://naftogazpostach.com/" target="_blank">naftogaz</a><span class="opisi">Кабин.Газ.2019</span></li>
+                <li><img class="icon" src="img/minfin.com.ua.ico" alt="minfin.com.ua"><a href="https://index.minfin.com.ua/tariff/electric/" target="_blank">minfin.com</a><span class="opisi">оф.цена.электр.</span></li>
+                <li><img class="icon" src="img/kiroe.com.ua.ico" alt="kiroe.com.ua"><a href="http://kiroe.com.ua/" target="_blank">kiroe</a><span class="opisi">Кабин.Кир.обленерго</span></li>
+                <li><img class="icon" src="img/ukrtelecom.ua.png" alt="ukrtelecom.ua"><a href="https://new.ukrtelecom.ua/payment/#generate-bill" target="_blank">ukrtelecom</a><span class="opisi">Укртел.СЧЕТ</span></li>
+				<li><img class="icon" src="img/kyivstar.ua.ico" alt="kyivstar.ua"><a href="https://kyivstar.ua/" target="_blank">kyivstar.ua</a></li>
+                <li><img class="icon" src="img/vodafone.ua.png" alt="vodafone.ua"><a href="https://www.vodafone.ua/ru" target="_blank">vodafone.ua</a></li>
+                <li><img class="icon" src="img/lifecell.ua.png" alt="lifecell.ua"><a href="https://www.lifecell.ua/" target="_blank">lifecell.ua</a></li>
+              </ul>
+              <ul id="">
+                <span class="badge badge-dark">*Банкинг*</span>
+                <hr>
+                <li><img class="icon" src="img/privat24.ua.ico" alt="privat24.ua"><a href="https://www.privat24.ua/" target="_blank">privat24.ua</a><span class="opisi">Онлайн</span></li>
+                <li><img class="icon" src="img/online.oschadbank.ua.ico" alt="online.oschadbank.ua"><a href="https://online.oschadbank.ua/wb/" target="_blank">online.oschadbank</a><span class="opisi">Онлайн</span></li>
+                <li><img class="icon" src="img/online.aval.ua.png" alt="online.aval.ua"><a href="https://online.aval.ua/ibank/home?0" target="_blank">online.aval.ua</a><span class="opisi">Онлайн</span></li>
+				<li><img class="icon" src="img/payoneer.com.ico" alt="payoneer"><a href="https://www.payoneer.com/raf/?rid=0FA0C022-2289-43EC-8770-3B4409BD83AF" target="_blank">payoneer`</a><span class="opisi">Интерн.кошелек</span></li>
+                <li><img class="icon" src="img/payeer.com.ico" alt="payeer"><a href="https://payeer.com/?partner=1687223" target="_blank">payeer`</a><span class="opisi">Интерн.кошелек</span></li>
+                <li><img class="icon" src="img/minfin.com.ua.ico" alt="minfin"><a href="https://minfin.com.ua/currency/" target="_blank">minfin.com.ua</a><span class="opisi">Курс валют</span></li>
+                <li><img class="icon" src="img/kurs.com.ua.ico" alt="kurs.com.ua"><a href="https://kurs.com.ua/" target="_blank">kurs</a><span class="opisi">Курс/конверт валют</span></li>
+                <li><img class="icon" src="img/bestchange.ru.png" alt="bestchange.ru"><a href="https://www.bestchange.ru/" target="_blank">bestchange.ru</a><span class="opisi">Обмен валют</span></li>
+              </ul>
+            </div>
+
+            <div class="col-sm">
               <ul id="">
                 <span class="badge badge-dark">*Отследить посылку*</span>
                 <hr>
@@ -166,33 +193,6 @@
                 <li><img class="icon" src="img/xiaomi.ua.ico" alt="xiaomi.ua"><a href="https://letyshops.com/r/xiaomi-ua-4qh7st5csy680o" target="_blank">xiaomi.ua`</a></li>
                 <li><img class="icon" src="img/bonprix.ua.ico" alt="bonprix.ua"><a href="https://letyshops.com/r/bonprix-ua-4qh7st5csygwc8" target="_blank">bonprix.ua`</a></li>
                 <li><img class="icon" src="img/apteka911.com.ua.ico" alt="apteka911.com.ua"><a href="https://letyshops.com/r/apteka-911-4qh7st5ct08woo" target="_blank">apteka911.com.ua`</a></li>
-              </ul>
-            </div>
-
-            <div class="col-sm">
-              <ul id="">
-                <span class="badge badge-dark">*Банкинг*</span>
-                <hr>
-                <li><img class="icon" src="img/privat24.ua.ico" alt="privat24.ua"><a href="https://www.privat24.ua/" target="_blank">privat24.ua</a><span class="opisi">Онлайн</span></li>
-                <li><img class="icon" src="img/online.oschadbank.ua.ico" alt="online.oschadbank.ua"><a href="https://online.oschadbank.ua/wb/" target="_blank">online.oschadbank</a><span class="opisi">Онлайн</span></li>
-                <li><img class="icon" src="img/online.aval.ua.png" alt="online.aval.ua"><a href="https://online.aval.ua/ibank/home?0" target="_blank">online.aval.ua</a><span class="opisi">Онлайн</span></li>
-				<li><img class="icon" src="img/payoneer.com.ico" alt="payoneer"><a href="https://www.payoneer.com/raf/?rid=0FA0C022-2289-43EC-8770-3B4409BD83AF" target="_blank">payoneer`</a><span class="opisi">Интерн.кошелек</span></li>
-                <li><img class="icon" src="img/payeer.com.ico" alt="payeer"><a href="https://payeer.com/?partner=1687223" target="_blank">payeer`</a><span class="opisi">Интерн.кошелек</span></li>
-                <li><img class="icon" src="img/minfin.com.ua.ico" alt="minfin"><a href="https://minfin.com.ua/currency/" target="_blank">minfin.com.ua</a><span class="opisi">Курс валют</span></li>
-                <li><img class="icon" src="img/kurs.com.ua.ico" alt="kurs.com.ua"><a href="https://kurs.com.ua/" target="_blank">kurs</a><span class="opisi">Курс/конверт валют</span></li>
-                <li><img class="icon" src="img/bestchange.ru.png" alt="bestchange.ru"><a href="https://www.bestchange.ru/" target="_blank">bestchange.ru</a><span class="opisi">Обмен валют</span></li>
-              </ul>
-              <ul id="">
-                <span class="badge badge-dark">*Комуналка*</span>
-                <hr> 
-                <li><img class="icon" src="img/minfin.com.ua.ico" alt="minfin.com.ua"><a href="https://index.minfin.com.ua/tariff/gas/" target="_blank">minfin.com</a><span class="opisi">оф.цена.газ</span></li>
-                <li><img class="icon" src="img/naftogazpostach.com.png" alt="naftogazpostach.com"><a href="https://naftogazpostach.com/" target="_blank">naftogaz</a><span class="opisi">Кабин.Газ.2019</span></li>
-                <li><img class="icon" src="img/minfin.com.ua.ico" alt="minfin.com.ua"><a href="https://index.minfin.com.ua/tariff/electric/" target="_blank">minfin.com</a><span class="opisi">оф.цена.электр.</span></li>
-                <li><img class="icon" src="img/kiroe.com.ua.ico" alt="kiroe.com.ua"><a href="http://kiroe.com.ua/" target="_blank">kiroe</a><span class="opisi">Кабин.Кир.обленерго</span></li>
-                <li><img class="icon" src="img/ukrtelecom.ua.png" alt="ukrtelecom.ua"><a href="https://new.ukrtelecom.ua/payment/#generate-bill" target="_blank">ukrtelecom</a><span class="opisi">Укртел.СЧЕТ</span></li>
-				<li><img class="icon" src="img/kyivstar.ua.ico" alt="kyivstar.ua"><a href="https://kyivstar.ua/" target="_blank">kyivstar.ua</a></li>
-                <li><img class="icon" src="img/vodafone.ua.png" alt="vodafone.ua"><a href="https://www.vodafone.ua/ru" target="_blank">vodafone.ua</a></li>
-                <li><img class="icon" src="img/lifecell.ua.png" alt="lifecell.ua"><a href="https://www.lifecell.ua/" target="_blank">lifecell.ua</a></li>
               </ul>
               <ul id="">
                 <span class="badge badge-dark">*Другое*</span>
@@ -222,12 +222,18 @@
                 <li><img class="icon" src="img/nmrda.kr-admin.gov.ua.jpg" alt="nmrda.kr-admin.gov.ua"><a href="http://nmrda.kr-admin.gov.ua/" target="_blank">Районна держ.адміністр.</a></li>
                 <li><img class="icon" src="img/rada-novomirgorod.gov.ua.ico" alt="rada-novomirgorod.gov.ua"><a href="http://rada-novomirgorod.gov.ua/" target="_blank">Новом-ка міська рада</a></li>
               </ul>
-              <ul id="">
+<!--               <ul id="">
                 <span class="badge badge-dark">*Реклама*</span>
                 <hr>
-                <!-- <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li> -->
-              </ul>
+                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
+                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a><img class="icontoo" src="img/_VPN_1.png" title ="Нужен VPN"></li>
+                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a><img class="icontoo" src="img/_VPN_2.png" title ="Нужен VPN"></li>
+                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
+                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
+				<li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
+              </ul> -->
             </div>
+
 
 
           </div>
