--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 <span class="badge badge-dark">*Поиск/Перевод/Граматика*</span>
                 <hr>
                 <li><img class="icon" src="img/google.ico" alt="Поиск Google"><a href="https://www.google.com.ua/" target="_blank">Поиск Google</a></li>
-                <li><img class="icon" src="img/yandex.ico" alt="Поиск Yandex"><a href="https://yandex.ua/" target="_blank">Поиск Yandex</a><img class="icontoo" src="img/VPN1.png" title ="Нужен VPN"></li>
+                <li><img class="icon" src="img/yandex.ico" alt="Поиск Yandex"><a href="https://yandex.ua/" target="_blank">Поиск Yandex</a><img class="icontoo" src="img/VPN1.png" title ="Для работы нужен VPN"></li>
                 <li><img class="icon" src="img/translate.google.com.ua.png" alt="Переводчик Google"><a href="https://translate.google.com.ua/" target="_blank">Переводчик Google</a></li>
                 <li><img class="icon" src="img/translate.ru.png" alt="Переводчик PROMT"><a href="https://www.translate.ru/" target="_blank">Переводчик PROMT</a></li>
                 <li><img class="icon" src="img/languagetool.org.png" alt="Граматика от languagetool"><a href="https://languagetool.org/uk/" target="_blank">Граматика от languagetool</a></li>
@@ -91,12 +91,12 @@
                 <span class="badge badge-dark">*Социум*</span>
                 <hr>
                 <li><img class="icon" src="img/facebook.com.ico" alt="Facebook"><a href="https://www.facebook.com/" target="_blank">Facebook.com</a></li>
-                <li><img class="icon" src="img/vk.com.ico" alt="ВКонтакте"><a href="https://vk.com/" target="_blank">ВКонтакте</a><img class="icontoo" src="img/VPN1.png" title ="Нужен VPN"></li>
-                <li><img class="icon" src="img/ok.ru.ico" alt="Однокласники"><a href="https://ok.ru/" target="_blank">Однокласники</a><img class="icontoo" src="img/VPN1.png" title ="Нужен VPN"></li>
+                <li><img class="icon" src="img/vk.com.ico" alt="ВКонтакте"><a href="https://vk.com/" target="_blank">ВКонтакте</a><img class="icontoo" src="img/VPN1.png" title ="Для работы нужен VPN"></li>
+                <li><img class="icon" src="img/ok.ru.ico" alt="Однокласники"><a href="https://ok.ru/" target="_blank">Однокласники</a><img class="icontoo" src="img/VPN1.png" title ="Для работы нужен VPN"></li>
                 <li><img class="icon" src="img/gmail.ico" alt="gmail"><a href="https://mail.google.com" target="_blank">почта_gmail</a></li>
                 <li><img class="icon" src="img/mail.ukr.net.ico" alt="mail.ukr.net"><a href="https://accounts.ukr.net/login" target="_blank">почта_ukr.net</a></li>
                 <li><img class="icon" src="img/webmail.meta.ua.ico" alt="webmail.meta.ua"><a href="https://webmail.meta.ua/" target="_blank">почта_meta.ua</a></li>
-                <li><img class="icon" src="img/e.mail.ru.ico" alt="e.mail.ru"><a href="https://e.mail.ru/login" target="_blank">почта_mail.ru</a><img class="icontoo" src="img/VPN1.png" title ="Нужен VPN"></li>
+                <li><img class="icon" src="img/e.mail.ru.ico" alt="e.mail.ru"><a href="https://e.mail.ru/login" target="_blank">почта_mail.ru</a><img class="icontoo" src="img/VPN1.png" title ="Для работы нужен VPN"></li>
               </ul>
               <ul id="">
                 <span class="badge badge-dark">*Новости*</span>
@@ -199,7 +199,7 @@
                 <hr>
                 <li><img class="icon" src="img/speed2.ico" alt="speedtest.ukrtelecom.ua"><a href="http://speedtest.ukrtelecom.ua/" target="_blank">speedtest.ukrtelecom.ua</a></li>
 				<li><img class="icon" src="img/rutracker.org.png" alt="rutracker.org"><a href="https://rutracker.org/" target="_blank">rutracker.org</a><span class="opisi">Торрент</span></li>
-                <li><img class="icon" src="img/nnmclub.to.png" alt="nnmclub.to"><a href="http://nnmclub.to/" target="_blank">nnmclub.to</a><img class="icontoo" src="img/VPN1.png" title ="Нужен VPN"><span class="opisi">Торрент</span></li>
+                <li><img class="icon" src="img/nnmclub.to.png" alt="nnmclub.to"><a href="http://nnmclub.to/" target="_blank">nnmclub.to</a><img class="icontoo" src="img/VPN1.png" title ="Для работы нужен VPN"><span class="opisi">Торрент</span></li>
                 <li><img class="icon" src="img/filmitorrent.ico" alt="filmitorrent"><a href="http://filmitorrent.xyz/" target="_blank">filmitorrent_TOP</a><span class="opisi">Торрент</span></li>
                 <li><img class="icon" src="img/bible-teka.com.ico" alt="bible-teka.com"><a href="https://bible-teka.com/" target="_blank">bible-teka</a><span class="opisi">Библия онлайн</span></li>
 				<li><img class="icon" src="img/slovohrista.org.jpg" alt="slovohrista.org"><a href="http://slovohrista.org/" target="_blank">slovohrista.org</a></li>
@@ -215,7 +215,7 @@
                 <li><img class="icon" src="img/sinoptik.ico" alt="sinoptik"><a href="https://sinoptik.ua/%D0%BF%D0%BE%D0%B3%D0%BE%D0%B4%D0%B0-%D0%BD%D0%BE%D0%B2%D0%BE%D0%BC%D0%B8%D1%80%D0%B3%D0%BE%D1%80%D0%BE%D0%B4" target="_blank">Погода_Sinoptik</a></li>
                 <li><img class="icon" src="img/rp5.ua.ico" alt="rp5.ua"><a href="http://rp5.ua/%D0%9F%D0%BE%D0%B3%D0%BE%D0%B4%D0%B0_%D0%B2_%D0%9D%D0%BE%D0%B2%D0%BE%D0%BC%D0%B8%D1%80%D0%B3%D0%BE%D1%80%D0%BE%D0%B4%D0%B5" target="_blank">Погода_Rp5.ua</a></li>
                 <li><img class="icon" src="img/meteoprog.ico" alt="meteoprog"><a href="https://www.meteoprog.ua/ru/review/Novomirgorod/" target="_blank">Погода_Meteoprog</a></li>
-				<li><img class="icon" src="img/vk.ico" alt="vk"><a href="https://vk.com/novomyrhorod_baraholka" target="_blank">рынок.БАРАХОЛКА</a><img class="icontoo" src="img/VPN1.png" title ="Нужен VPN"></li>
+				<li><img class="icon" src="img/vk.ico" alt="vk"><a href="https://vk.com/novomyrhorod_baraholka" target="_blank">рынок.БАРАХОЛКА</a><img class="icontoo" src="img/VPN1.png" title ="Для работы нужен VPN"></li>
                 <li><img class="icon" src="img/youtube.ico" alt="youtube"><a href="https://www.youtube.com/channel/UCKjCg071hg21YxymgDfz5TA" target="_blank">Youtube_г.Новомиргород</a></li>
                 <li><img class="icon" src="img/youtube.ico" alt="youtube"><a href="https://www.youtube.com/channel/UCpx67qi-50ZnWOUlDqBhSNQ" target="_blank">Youtube_Новом-ка ЗШ2</a></li>
                 <li><img class="icon" src="img/novomirgorod.com.png" alt="novomirgorod"><a href="http://novomirgorod.com" target="_blank">Новини та події</a></li>
